--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
     <a class="common-button--text" href="/world">
-      The first Rails World is now sold out. See you October 5 & 6 in Amsterdam.
+      Rails World 2023 is a wrap! Thanks to all the sponsors, speakers, and attendees who came. See you next time!
     </a>
   </p>
 </div>
