--- a/_layouts/world/agenda.html
+++ b/_layouts/world/agenda.html
@@ -4,8 +4,7 @@ layout: world/default
 
 <content-container class="agenda">
   <h1>Agenda</h1>
-  <p>Explore two full days of Rails World, featuring keynotes, talks, workshops, sessions and more.</p>
-  <small>(Note: A conference app where you can build and save your schedule will be launched soon.)</small>
+  <p>Rails World featured two full days of keynotes, talks, workshops, sessions and more. All sessions on the two main stages were recorded and will be shared soon.</p>
 
   <turbo-frame id="agenda" data-turbo-action="advance">
     <h2 class="visually-hidden">
