--- a/_includes/world/header.html
+++ b/_includes/world/header.html
@@ -8,7 +8,7 @@
       <li><a href="/world/speakers" class="nav__link">Speakers</a></li>
       <li><a href="/world/agenda" class="nav__link">Agenda</a></li>
       <li><a href="/world/faq" class="nav__link">FAQs</a></li>
-      <li><button class="tito" disabled>Videos coming soon</button></li>
+<!--       <li><button class="tito" disabled>Videos coming soon</button></li> -->
     </ul>
   </nav>
 </header>
