--- a/_includes/world/sponsors.html
+++ b/_includes/world/sponsors.html
@@ -1,7 +1,7 @@
 <section class="sponsors">
   <h2>Thank You Sponsors!</h2>
   <br>
-  <p>Rails World wouldn't be possible without the generous support of Rails World sponsors and Rails Foundation members. Visit them in the Sponsor Lounge and throughout the event.</p>
+  <p>Rails World could not have been possible without the generous support of Rails World sponsors and Rails Foundation members.</p>
 
   <div class="sponsors__frame">
     <bordered-container>
