Add link to videos playlist

--- a/_includes/world/header.html
+++ b/_includes/world/header.html
@@ -8,7 +8,14 @@
       <li><a href="/world/speakers" class="nav__link">Speakers</a></li>
       <li><a href="/world/agenda" class="nav__link">Agenda</a></li>
       <li><a href="/world/faq" class="nav__link">FAQs</a></li>
-<!--       <li><button class="tito" disabled>Videos coming soon</button></li> -->
+      <li>
+        <a
+          class="button prime"
+          href="https://www.youtube.com/playlist?list=PLHFP2OPUpCeY9IX3Ht727dwu5ZJ2BBbZP"
+          target="_blank">
+          View all videos
+        </a>
+      </li>
     </ul>
   </nav>
 </header>
