--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
-    <a class="common-button--text" href="/world">
-      Rails World 2023 is a wrap! Thanks to all the sponsors, speakers, and attendees who came. See you next time!
+    <a class="common-button--text" href="https://www.youtube.com/playlist?list=PLHFP2OPUpCeY9IX3Ht727dwu5ZJ2BBbZP" target="_blank">
+      <b>Rails World 2023</b> - All talks now available on the official Rails YouTube account.
     </a>
   </p>
 </div>
