--- a/_sass/modules/_icon.scss
+++ b/_sass/modules/_icon.scss
@@ -34,6 +34,17 @@
 
   }
 
+  &--mastodon {
+
+    padding-left: 23px;
+
+    &:after {
+      background-image: url(../images/icon-mastodon.svg);
+      width: 19px;
+    }
+
+  }
+
   &--world {
 
     &:after {
