Update banner.html with Job board announcement

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
     <a class="common-button--text" href="https://www.youtube.com/playlist?list=PLHFP2OPUpCeY9IX3Ht727dwu5ZJ2BBbZP" target="_blank">
-      <b>Rails World 2023</b> - All talks now available on the official Rails YouTube account.
+      <b>The Rails Job Board is live</b> - Find your next Rails role here.
     </a>
   </p>
 </div>
