--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,7 +17,7 @@
         </ul>
 
         <ul>
-          {% for option in site.data.nav.items limit:4 %}
+          {% for option in site.data.nav.items limit:4 offset:4 %}
             <li><a href="{{ option.url }}"><span>{{ option.title }}</span></a></li>
           {% endfor %}
         </ul>
