--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,6 +1,6 @@
 <div class="banner text--align-center">
   <p>
-    <a class="common-button--text" href="https://www.youtube.com/playlist?list=PLHFP2OPUpCeY9IX3Ht727dwu5ZJ2BBbZP" target="_blank">
+    <a class="common-button--text" href="https://jobs.rubyonrails.org/" target="_blank">
       <b>The Rails Job Board is live</b> - Find your next Rails role here.
     </a>
   </p>
