updated file structure for sessions / agenda

--- a/_includes/world/announcements.html
+++ b/_includes/world/announcements.html
@@ -1,4 +1,4 @@
-{% assign announcements = site.data.world.announcements %}
+{% assign announcements = site.data.world['2023'].announcements %}
 {% if announcements %}
   <div class="announcements">
     {% for announcement in announcements %}
