updated footer links

--- a/_includes/world/footer.html
+++ b/_includes/world/footer.html
@@ -20,9 +20,9 @@
       </li>
     </ul>
     <ul>
-      <li><a href="/world/conduct">Code of Conduct</a></li>
+      <li><a href="/world/2023/conduct">Code of Conduct</a></li>
       <li><a href="https://rubyonrails.org/foundation/privacy" target="_blank">Privacy Policy</a></li>
-      <li><a href="/world/terms">Terms & Conditions</a></li>
+      <li><a href="/world/2023/terms">Terms & Conditions</a></li>
     </ul>
   </bordered-container>
 </footer>
