--- a/_includes/world/sponsors.html
+++ b/_includes/world/sponsors.html
@@ -7,21 +7,21 @@
     <bordered-container>
       <flex-container>
         <ul class="sponsors__logos" role="group" aria-label="Platinum Sponsors">
-          {% for sponsor in site.data.world.sponsors.platinum %}
+          {% for sponsor in site.data.world['2023'].sponsors.platinum %}
             <li>
               <a href="{{ sponsor.url }}" target="_blank"><img src="{{ sponsor.logo }}" alt="{{ sponsor.name }}'s Logo"></a>
             </li>
           {% endfor %}
         </ul>
         <ul class="sponsors__logos sponsors__logos--medium" role="group" aria-label="Gold Sponsors">
-          {% for sponsor in site.data.world.sponsors.gold %}
+          {% for sponsor in site.data.world['2023'].sponsors.gold %}
             <li>
               <a href="{{ sponsor.url }}" target="_blank"><img src="{{ sponsor.logo }}" alt="{{ sponsor.name }}'s Logo"></a>
             </li>
           {% endfor %}
         </ul>
         <ul class="sponsors__logos sponsors__logos--small" role="group" aria-label="Silver Sponsors">
-          {% for sponsor in site.data.world.sponsors.silver %}
+          {% for sponsor in site.data.world['2023'].sponsors.silver %}
             <li>
               <a href="{{ sponsor.url }}" target="_blank"><img src="{{ sponsor.logo }}" alt="{{ sponsor.name }}'s Logo"></a>
             </li>
