--- a/_includes/world/2023/footer.html
+++ b/_includes/world/2023/footer.html
@@ -10,12 +10,12 @@
     <ul>
       <li>
         <a href="https://twitter.com/rails" aria-label="Rails on Twitter" target="_blank">
-          {% include world/icons/twitter.html %}
+          {% include world/2023/icons/twitter.html %}
         </a>
       </li>
       <li>
         <a href="https://www.linkedin.com/company/ruby-on-rails-org/" aria-label="Rails on LinkedIn" target="_blank">
-          {% include world/icons/linkedin.html %}
+          {% include world/2023/icons/linkedin.html %}
         </a>
       </li>
     </ul>
