--- a/_layouts/world/agenda.html
+++ b/_layouts/world/agenda.html
@@ -17,7 +17,7 @@ layout: world/default
       {% endif %}
     </h2>
 
-    {% include world/agenda/tabs.html %}
+    {% include world/2023/agenda/tabs.html %}
     <br>
 
     <small>Schedule is in Central European Summer Time (CEST)</small>
