--- a/_layouts/world/default.html
+++ b/_layouts/world/default.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 
 <html lang="en" style="scroll-behavior: smooth">
-  {% include world/head.html %}
+  {% include world/2023/head.html %}
   <body>
     <a href="#main-content" class="button button--light skip-navigation" tabindex="0">
       Skip to main content
     </a>
 
-    {% include world/announcements.html %}
-    {% include world/header.html %}
+    {% include world/2023/announcements.html %}
+    {% include world/2023/header.html %}
     <main id="main-content" tabindex="-1">
       {{ content }}
     </main>
 
-    {% include world/footer.html %}
+    {% include world/2023/footer.html %}
 
     <back-to-top>
       <button aria-label="Back to top">
-        {% include world/icons/back-to-top.html %}
+        {% include world/2023/icons/back-to-top.html %}
         <span>Back to top</span>
       </button>
     </back-to-top>
