migrated layout files

--- a/_includes/world/2023/head.html
+++ b/_includes/world/2023/head.html
@@ -1,7 +1,7 @@
 {% if page.title %}
-  {% assign title = site.world_title | append: ' &mdash; ' | append: page.title %}
+  {% assign title = site.world23_title | append: ' &mdash; ' | append: page.title %}
 {% else %}
-  {% assign title = site.world_title %}
+  {% assign title = site.world23_title %}
 {% endif %}
 
 {% if page.description %}
@@ -26,7 +26,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ description }}" />
 
-  <meta property="og:site_name" content="{{ site.world_title }}" />
+  <meta property="og:site_name" content="{{ site.world23_title }}" />
   <meta property="og:title" content="{{ title }}" />
   <meta property="og:description" content="{{ description }}" />
   <meta property="og:image" content="{{ image }}" />
@@ -38,7 +38,7 @@
   <meta name="twitter:image" content="{{ image }}" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:creator" content="@{{ site.twitter }}" />
-  <meta name="twitter:image:alt" content="{{ site.world_title }}" />
+  <meta name="twitter:image:alt" content="{{ site.world23_title }}" />
 
   <script type="application/ld+json">
     {
@@ -48,7 +48,7 @@
         "@type": "WebPage",
         "@id": "{{ url }}"
       },
-      "name": "{{ site.world_title }}",
+      "name": "{{ site.world23_title }}",
       "headline": "{{ title }}",
       "description": "{{ description }}",
       "url": "{{ url }}",
