--- a/_layouts/world/2023/speaker.html
+++ b/_layouts/world/2023/speaker.html
@@ -1,5 +1,5 @@
 ---
-layout: world/default
+layout: world/2023/default
 ---
 {% assign filteredSessions = site.world_sessions | where_exp:"session", "page.path contains session.speaker" | where_exp: 'item', 'item.path contains "2023"'%}
 
