--- a/_includes/world/2023/head.html
+++ b/_includes/world/2023/head.html
@@ -78,4 +78,5 @@
   <link rel="apple-touch-icon" type="image/png" href="/assets/images/apple-touch-icon.png" />
   <link rel="stylesheet" href="https://use.typekit.net/lar2lzk.css">
   <link rel="stylesheet" href="/assets/css/world-2023.css" />
+  <link rel="canonical" href="{{ url }}" />
 </head>
