--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
-    <a class="common-button--text" href="https://jobs.rubyonrails.org/" target="_blank">
-      <b>The Rails Job Board is live</b> - Find your next Rails role here.
+    <a class="common-button--text" href="https://rails-foundation.neetoform.com/d3f4fe83d6595c7af4d3" target="_blank">
+      <b>Become a Rails World 2024 sponsor.</b> - Download the prospectus here.
     </a>
   </p>
 </div>
