--- a/_includes/head.html
+++ b/_includes/head.html
@@ -65,8 +65,7 @@
     }
   </script>
   <script defer data-domain="rubyonrails.org" src="https://plausible.io/js/script.js"></script>
-  <link rel="icon" href="/assets/images/favicon.ico" />
-  <link rel="apple-touch-icon" type="image/png" href="/assets/images/apple-touch-icon.png" />
+  <link rel="icon" href="/assets/images/favicon.png" />
   <link rel="stylesheet" href="/assets/css/style.css" />
   <link rel="alternate" type="application/rss+xml"  href="{{ site.feed_path }}" title="The official {{ site.title }} blog">
 </head>
