--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
-    <a class="common-button--text" href="https://public.3.basecamp.com/p/xuZrxDiHj7vQbFzATqz8U8gc" target="_blank">
-      <b>Become a Rails World 2024 sponsor.</b> Download the prospectus here.
+    <a class="common-button--text" href="https://sessionize.com/rails-world/" target="_blank">
+      The Rails World CFP is now open. Submit your proposal before March 21.
     </a>
   </p>
 </div>
