--- a/_sass/world/2024/base/_typography.scss
+++ b/_sass/world/2024/base/_typography.scss
@@ -9,8 +9,10 @@
 }
 
 h1 {
+  color: var(--text-color);
   font-size: var(--type-xxx-large);
   font-variation-settings: var(--font-weight-800);
+  font-style: normal;
 
   /* Extra small devices (phones, 600px and down) */
   @media only screen and (max-width: 600px) {
@@ -19,8 +21,10 @@ h1 {
 }
 
 h2 {
+  color: var(--text-color);
   font-size: var(--type-xx-large);
   font-variation-settings: var(--font-weight-800);
+  font-style: normal;
 
   /* Extra small devices (phones, 600px and down) */
   @media only screen and (max-width: 600px) {
@@ -29,8 +33,10 @@ h2 {
 }
 
 h3 {
+  color: var(--text-color);
   font-size: var(--type-x-large);
   font-variation-settings: var(--font-weight-800);
+  font-style: normal;
 
   /* Extra small devices (phones, 600px and down) */
   @media only screen and (max-width: 600px) {
@@ -39,6 +45,7 @@ h3 {
 }
 
 h4 {
+  color: var(--text-color);
   font-size: var(--type-large);
 
   /* Extra small devices (phones, 600px and down) */
@@ -48,15 +55,17 @@ h4 {
 }
 
 h5 {
+  color: var(--text-color);
   font-size: var(--type-medium);
 
   /* Extra small devices (phones, 600px and down) */
   @media only screen and (max-width: 600px) {
-  font-size: var(--type-small);
+    font-size: var(--type-small);
   }
 }
 
 h6 {
+  color: var(--text-color);
   font-size: var(--type-small);
 
   /* Extra small devices (phones, 600px and down) */
@@ -66,6 +75,7 @@ h6 {
 }
 
 p {
+  color: var(--text-color);
   line-height: 150%;
   font-variation-settings: var(--font-weight-600);
 
