--- a/assets/css/world-2024.scss
+++ b/assets/css/world-2024.scss
@@ -4,7 +4,21 @@
 @charset 'utf-8';
 
 @import 'base/reset';
+@import 'base/variables';
+@import 'common/shape';
 
+@import 'world/2024/base/variables';
 @import 'world/2024/base/body';
 @import 'world/2024/base/metrics';
 @import 'world/2023/base/typography';
+@import 'world/2024/base/colors';
+
+@import 'world/2024/common/button';
+@import 'world/2024/common/shape';
+
+@import 'world/2024/modules/landing_page';
+@import 'world/2024/modules/faq';
+@import 'world/2024/modules/header';
+@import 'world/2024/modules/footer';
+@import 'world/2024/modules/legal';
+@import 'world/2024/modules/announcements';
