Quick fix initial 2024 Rails World bugs found on release

--- a/_includes/world/2024/footer.html
+++ b/_includes/world/2024/footer.html
@@ -22,7 +22,7 @@
           href="/world/2024/conduct" 
           aria-label="Code of Conduct" 
           target="_blank" 
-          class="link small"
+          class="link small footerLink"
         >
           Code of Conduct
         </a>
