--- a/_sass/world/2024/base/_body.scss
+++ b/_sass/world/2024/base/_body.scss
@@ -1,6 +1,7 @@
 html {
   font-family: "acumin-variable", sans-serif;
   font-variation-settings: var(--font-weight-700);
+  overflow-x: hidden;
 }
 
 body {
