--- a/_sass/world/2024/base/_colors.scss
+++ b/_sass/world/2024/base/_colors.scss
@@ -3,7 +3,7 @@
     --dark-red: #CF1618;
     --purple-pale: #F3EDFF;
     --purple: #4E2A73;
-//    --purple-dark: #432463;
+    --purple-dark: #432463;
     --purple-gradient: linear-gradient(141deg, var(--purple) 40%, rgba(58, 31, 85, 1) 100%);
     --white: #ffffff;
     --black: #000000;
