--- a/_sass/world/2024/modules/_landing_page.scss
+++ b/_sass/world/2024/modules/_landing_page.scss
@@ -49,7 +49,7 @@
 
 .half-container {
     padding-top: var(--space-small);
- //   background-color: var(--purple-dark);
+    background-color: var(--purple-dark);
     width: 100%;
     position: relative;
 
