Update banner.html to announce Rails World website

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
-    <a class="common-button--text" href="https://sessionize.com/rails-world/" target="_blank">
-      The Rails World CFP is now open. Submit your proposal before March 21.
+    <a class="common-button--text" href="https://rubyonrails.org/world/2024" target="_blank">
+      The Rails World website is live. More info and tickets coming soon.
     </a>
   </p>
 </div>
