--- a/_sass/world/2024/base/_body.scss
+++ b/_sass/world/2024/base/_body.scss
@@ -1,7 +1,33 @@
 html {
+  overflow-x: hidden;
+}
+
+// Fonts are only able to be udpated here for some reason.
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-family: "acumin-variable", sans-serif;
   font-variation-settings: var(--font-weight-700);
-  overflow-x: hidden;
+}
+
+p {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+a,
+button {
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  font-style: italic;
+  letter-spacing: 1px;
+
+  @media screen and (max-width: 800px){
+    letter-spacing: 0.5px;
+  }
 }
 
 body {
