--- a/_sass/world/2024/base/_metrics.scss
+++ b/_sass/world/2024/base/_metrics.scss
@@ -7,6 +7,7 @@
   --space-x-large: 3em;
   --space-xx-large: 4em;
   --space-xxx-large: 6em;
+  --space-xxxx-large: 10em;
 
   /* Font size modular scale */
   --type-base: calc(1.6em + 0.5vw);
