--- a/_sass/world/2024/base/_typography.scss
+++ b/_sass/world/2024/base/_typography.scss
@@ -9,6 +9,7 @@
 }
 
 h1 {
+  font-family: "acumin-variable", sans-serif;
   color: var(--text-color);
   font-size: var(--type-xxx-large);
   font-variation-settings: var(--font-weight-800);
@@ -21,6 +22,7 @@ h1 {
 }
 
 h2 {
+  font-family: "acumin-variable", sans-serif;
   color: var(--text-color);
   font-size: var(--type-xx-large);
   font-variation-settings: var(--font-weight-800);
@@ -33,6 +35,7 @@ h2 {
 }
 
 h3 {
+  font-family: "acumin-variable", sans-serif;
   color: var(--text-color);
   font-size: var(--type-x-large);
   font-variation-settings: var(--font-weight-800);
@@ -45,6 +48,7 @@ h3 {
 }
 
 h4 {
+  font-family: "acumin-variable", sans-serif;
   color: var(--text-color);
   font-size: var(--type-large);
 
@@ -55,6 +59,7 @@ h4 {
 }
 
 h5 {
+  font-family: "acumin-variable", sans-serif;
   color: var(--text-color);
   font-size: var(--type-medium);
 
@@ -65,6 +70,7 @@ h5 {
 }
 
 h6 {
+  font-family: "acumin-variable", sans-serif;
   color: var(--text-color);
   font-size: var(--type-small);
 
@@ -75,21 +81,17 @@ h6 {
 }
 
 p {
+  font-family: Roboto;
+  font-style: normal;
   color: var(--text-color);
-  line-height: 150%;
-  font-variation-settings: var(--font-weight-600);
+  line-height: 1.3;
 
   /* Extra small devices (phones, 600px and down) */
   @media only screen and (max-width: 600px) {
     font-size: var(--type-small);
-    font-variation-settings: var(--font-weight-400);
   }
 }
 
 strong {
   font-weight: 800;
-}
-
-em {
-  font-style: italic;
 }
