--- a/_sass/world/2024/modules/_landing_page.scss
+++ b/_sass/world/2024/modules/_landing_page.scss
@@ -1,5 +1,6 @@
 .landing-page {
     width: 100%;
+    position: relative;
 }
 
 .content-container {
@@ -10,6 +11,16 @@
 
     @media only screen and (max-width: 800px) {
         padding: var(--mobile-padding);
+    }
+
+    // Actual phone
+    @media only screen and (max-width: 500px) {
+        padding: var(--smaller-mobile-padding);
+    }
+
+    // Larger Desktop 
+    @media only screen and (min-width: 1550px) {
+        padding: var(--larger-desktop-padding);
     }
 }
 
