--- a/_sass/world/2024/modules/_announcements.scss
+++ b/_sass/world/2024/modules/_announcements.scss
@@ -7,6 +7,7 @@
     justify-content: center;
     padding: 10px 0;
     border-bottom: var(--border-style);
+    font-size: var(--type-x-small);
 
     .textContainer {
         // background-color: cyan;
@@ -18,16 +19,24 @@
         p {
             text-align: center;
             color: var(--white);
-            font-size: var(--type-x-small);
-
-            @media screen and (max-width: 500px){
-                font-size: var(--type-xxx-small);
-            }
+            font-weight: 700;
         }
     }
 
     a {
+        font-family: "Roboto";
+        font-weight: 700;
         font-style: normal;
         color: var(--white);
+        transition: all 0.2s ease;
+
+        &:hover {
+            text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.3);
+        }
+    }
+
+
+    @media screen and (max-width: 500px) {
+        font-size: var(--type-xx-small);
     }
 }
