--- a/_sass/world/2024/modules/_faq.scss
+++ b/_sass/world/2024/modules/_faq.scss
@@ -55,7 +55,7 @@ details summary::-webkit-details-marker {
                     border: var(--border-style);
                     border-radius: 5px;
                     color: var(--white);
-                    padding: var(--space-x-small) var(--space-small);
+                    padding: var(--space-small);
                     display: flex;
                     justify-content: flex-start;
                     align-items: center;
