Fix mobile scroll issue

--- a/_includes/world/2024/footer.html
+++ b/_includes/world/2024/footer.html
@@ -7,56 +7,35 @@
       <div class="textContainer">
         <p>
           This website was designed and created by
-          <a 
-            href="https://www.johnfarina.co/" 
-            aria-label="John Farina's web portfiolio" 
-            target="_blank" 
-            class="button main x-small my-button"
-          >
+          <a href="https://www.johnfarina.co/" aria-label="John Farina's web portfiolio" target="_blank"
+            class="button main x-small my-button">
             John Farina
-          </a>: a junior developer from the Rails community.
+          </a> - a junior developer from the Rails community.
         </p>
       </div>
       <div class="footerLegalContainer">
-        <a 
-          href="/world/2024/conduct" 
-          aria-label="Code of Conduct" 
-          target="_blank" 
-          class="link small footerLink"
-        >
+        <a href="/world/2024/conduct" aria-label="Code of Conduct" target="_blank" class="link small footerLink">
           Code of Conduct
         </a>
-        <a 
-          href="/foundation/privacy" 
-          aria-label="Privacy Policy" 
-          target="_blank" 
-          class="link small"
-        >
+        <a href="/foundation/privacy" aria-label="Privacy Policy" target="_blank" class="link small">
           Privacy Policy
         </a>
-        <a 
-          href="/world/2024/terms" 
-          aria-label="Terms and Conditions" 
-          target="_blank" 
-          class="link small"
-        >
+        <a href="/world/2024/terms" aria-label="Terms and Conditions" target="_blank" class="link small">
           Terms & Conditions
         </a>
       </div>
     </div>
 
     <div class="sideContainer right">
-      <div class="socialLinks">
-        <a href="https://twitter.com/rails" aria-label="Rails on Twitter" target="_blank">
-          {% include world/2023/icons/twitter.html %}
-        </a>
-        <a 
-          href="https://www.linkedin.com/company/ruby-on-rails-org/" 
-          aria-label="Rails on LinkedIn" 
-          target="_blank"
-        >
-          {% include world/2023/icons/linkedin.html %}
-        </a>
+      <div class="linksContainer">
+        <div class="socialLinks">
+          <a href="https://twitter.com/rails" aria-label="Rails on Twitter" target="_blank">
+            {% include world/2023/icons/twitter.html %}
+          </a>
+          <a href="https://www.linkedin.com/company/ruby-on-rails-org/" aria-label="Rails on LinkedIn" target="_blank">
+            {% include world/2023/icons/linkedin.html %}
+          </a>
+        </div>
       </div>
     </div>
   </div>
