--- a/_sass/world/2024/modules/_footer.scss
+++ b/_sass/world/2024/modules/_footer.scss
@@ -1,4 +1,5 @@
 footer {
+    overflow-x: hidden;
     display: flex;
     height: 85px;
     width: 100%;
@@ -48,24 +49,28 @@ footer {
         height: 100%;
         border-right: var(--border-style);
 
-        .socialLinks {
+        .linksContainer {
             display: flex;
             align-items: center;
             justify-content: center;
             height: 100%;
-            gap: 15px;
 
-            a {
-                svg {
-                    width: 25px;
-                    fill: var(--white);
-                    transition: all 0.2s ease;
-                }
+            .socialLinks {
+                display: flex;
+                gap: 15px;
 
-                &:hover {
+                a {
                     svg {
-                        fill: var(--red);
-                        transform: translateY(-1px);
+                        width: 25px;
+                        fill: var(--white);
+                        transition: all 0.2s ease;
+                    }
+
+                    &:hover {
+                        svg {
+                            fill: var(--red);
+                            transform: translateY(-1px);
+                        }
                     }
                 }
             }
@@ -77,8 +82,10 @@ footer {
         }
 
         @media screen and (max-width: 800px) {
-            .socialLinks {
-                gap: 5px;
+            .linksContainer {
+                .socialLinks {
+                    gap: 5px;
+                }
             }
         }
     }
@@ -162,12 +169,14 @@ footer {
     }
 
     @media only screen and (max-width: 800px) {
+        padding-left: 0;
+
         .sideContainer {
-            width: 120px;
+            width: 18%;
         }
 
         .center {
-            width: 400px;
+            width: 60%;
         }
     }
 }
