--- a/_sass/world/2024/base/_colors.scss
+++ b/_sass/world/2024/base/_colors.scss
@@ -1,6 +1,7 @@
 :root {
     --red: #cb0c1c;
     --dark-red: #CF1618;
+    --blue: #8BADDA;
     --purple-pale: #F3EDFF;
     --purple: #4E2A73;
     --purple-dark: #432463;
