--- a/assets/css/world-2024.scss
+++ b/assets/css/world-2024.scss
@@ -22,3 +22,7 @@
 @import 'world/2024/modules/footer';
 @import 'world/2024/modules/legal';
 @import 'world/2024/modules/announcements';
+@import 'world/2024/modules/speaker_card';
+@import 'world/2024/modules/sponsor_card';
+@import 'world/2024/modules/sponsors';
+@import 'world/2024/modules/speakers';
