--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,7 +9,7 @@
 @import 'base/mixins';
 @import 'base/body';
 @import 'base/container';
-@import 'base/fruity';
+@import 'base/highlight';
 
 @import 'common/background';
 @import 'common/border';
