make code blocks render properly on smaller screens

--- a/_sass/common/_content.scss
+++ b/_sass/common/_content.scss
@@ -234,8 +234,8 @@
     overflow-x: auto;
     white-space: pre;
     code {
-      width: 100%;
       padding: 22px 30px;
+      min-width: 100%;
     }
   }
 
