--- a/_sass/common/_headline.scss
+++ b/_sass/common/_headline.scss
@@ -15,6 +15,12 @@
   h2 {
     color: $color-red;
     font-size: 39px;
+    @media (max-width: 800px) {
+      font-size: 32px;
+    }
+    @media (max-width: 600px) {
+      font-size: 28px;
+    }
     font-weight: 700;
     letter-spacing: -0.01em;
     line-height: 38px;
