Fix: Codeblock contrast issue on system dark mode

--- a/_sass/common/_content.scss
+++ b/_sass/common/_content.scss
@@ -344,7 +344,7 @@
 
 @media (prefers-color-scheme: dark) {
   pre, code {
-    background-color: $color-grey-1;
+    background-color: none;
     color: #fff;
   } // pre, code
 
