--- a/_includes/world/2024/sections/speakers.html
+++ b/_includes/world/2024/sections/speakers.html
@@ -5,10 +5,9 @@
 <section class="content-container speaker-cards">
     <div class="headerContainer">
         <div class="textContainer">
-            <h3>Speakers</h3>
+            <h3>Keynote Speakers</h3>
             <p>
-                Our industry's brightest speakers gathered in Toronto to share their expertise, insights, and success
-                stories.
+                Gain invaluable insights from our four keynote speakers on the present landscape of Rails and where Rails is headed tomorrow and beyond. More speakers announced soon.
             </p>
         </div>
         <div class="buttonsContainer">
