Commenting out arrows

--- a/_includes/world/2024/sections/speakers.html
+++ b/_includes/world/2024/sections/speakers.html
@@ -10,14 +10,14 @@
                 Gain invaluable insights from our four keynote speakers on the present landscape of Rails and where Rails is headed tomorrow and beyond. More speakers announced soon.
             </p>
         </div>
-        <div class="buttonsContainer">
+    <!-- <div class="buttonsContainer">
             <button alt="Left Arrow" id="leftBtn" aria-label="scroll carousel backward">
                 <img alt="Left Arrow" src="/assets/world/2023/previous.svg">
             </button>
             <button alt="Right Arrow" id="rightBtn" aria-label="scroll carousel forward">
                 <img alt="Right Arrow" src="/assets/world/2023/next.svg">
             </button>
-        </div>
+        </div> -->
     </div>
     <div class="cardsContainer">
         {% for speaker in keynote_speakers %}
