Fix speaker centering in _speakers.scss

--- a/_sass/world/2024/modules/_speakers.scss
+++ b/_sass/world/2024/modules/_speakers.scss
@@ -79,5 +79,9 @@
         scroll-snap-points-x: repeat(100%);
         scroll-snap-stop: always;
         -webkit-overflow-scrolling: touch;
+
+        @media screen and (min-width: 650px) {
+          justify-content: center;
+        }
     }
 }
