--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
     <a class="common-button--text" href="https://rubyonrails.org/world/2024" target="_blank">
-      The Rails World website is live. More info and tickets coming soon.
+      Rails World tickets will go on sale Tuesday April 30, 1pm EDT. Book your ticket here.
     </a>
   </p>
 </div>
