Add an inline Tito widget - Rails World 2024

--- a/_sass/world/2024/modules/_landing_page.scss
+++ b/_sass/world/2024/modules/_landing_page.scss
@@ -33,7 +33,7 @@
     gap: 20px;
     padding-top: -2rem;
 
-    svg {
+    .logoSvg {
         image-rendering: crisp-edges;
         --webkit-image-rendering: crisp-edges;
         -webkit-transform: translate3d(0, 0, 0);
@@ -49,7 +49,7 @@
         padding-bottom: 60px;
         gap: 40px;
 
-        svg {
+        .logoSvg {
             display: none;
         }
     }
