--- a/assets/css/world-2024.scss
+++ b/assets/css/world-2024.scss
@@ -26,3 +26,4 @@
 @import 'world/2024/modules/sponsor_card';
 @import 'world/2024/modules/sponsors';
 @import 'world/2024/modules/speakers';
+@import 'world/2024/modules/tito_widget';
