Update speakers description width

--- a/_sass/world/2024/modules/_speakers.scss
+++ b/_sass/world/2024/modules/_speakers.scss
@@ -1,3 +1,4 @@
+// Replace existing code with // ! code - when more than 4 speakers
 .speaker-cards {
     display: flex;
     flex-direction: column;
@@ -16,7 +17,9 @@
             align-items: flex-start;
             justify-content: center;
             gap: var(--header-and-paragraph-padding);
-            width: 85%;
+
+            width: 100%;
+            // ! width: 85%;
 
             p {
                 text-align: start;
@@ -28,7 +31,9 @@
         }
 
         .buttonsContainer {
-            display: flex;
+            display: none;
+            // ! display: flex;
+
             align-items: flex-end;
             justify-content: flex-end;
             gap: 15px;
@@ -81,7 +86,8 @@
         -webkit-overflow-scrolling: touch;
     }
 
-    // Centering for four speakers (need to change if speakers change)
+    // ! Centering for four speakers
+    // ! Remove this whole media query when more than 4 speakers
     @media screen and (min-width: 1350px) {
         .headerContainer {
             justify-content: center;
