--- a/_includes/world/2024/sections/speakers.html
+++ b/_includes/world/2024/sections/speakers.html
@@ -1,44 +1,46 @@
 {% assign sorted_speakers = site.world_speakers | where_exp: 'item', 'item.path contains "2024"' | sort: 'last_name' %}
 {% assign keynote_speakers = sorted_speakers | where: 'keynote', true %}
-{% assign non_keynote_speakers = sorted_speakers | where_exp: "speaker", "speaker.keynote != true" | sort: "first_name" %}
+{% assign non_keynote_speakers = sorted_speakers | where_exp: "speaker", "speaker.keynote != true" | sort: "first_name"
+%}
 
 <section class="content-container speaker-cards">
     <div class="headerContainer">
         <div class="textContainer">
             <h3>Keynote Speakers</h3>
             <p>
-                Gain invaluable insights from our four keynote speakers on the present landscape of Rails and where Rails is headed tomorrow and beyond. More speakers announced soon.
+                Gain invaluable insights from our four keynote speakers on the present landscape of Rails and where
+                Rails is headed tomorrow and beyond. More speakers announced soon.
             </p>
         </div>
-    <!-- <div class="buttonsContainer">
+        <div class="buttonsContainer">
             <button alt="Left Arrow" id="leftBtn" aria-label="scroll carousel backward">
                 <img alt="Left Arrow" src="/assets/world/2023/previous.svg">
             </button>
             <button alt="Right Arrow" id="rightBtn" aria-label="scroll carousel forward">
                 <img alt="Right Arrow" src="/assets/world/2023/next.svg">
             </button>
-        </div> -->
+        </div>
     </div>
     <div class="cardsContainer">
         {% for speaker in keynote_speakers %}
-            {%
-            include world/2024/speaker-card.html
-            first_name=speaker.first_name 
-            last_name=speaker.last_name
-            role=speaker.role
-            company=speaker.company
-            photo=speaker.image_path
-            %}
+        {%
+        include world/2024/speaker-card.html
+        first_name=speaker.first_name
+        last_name=speaker.last_name
+        role=speaker.role
+        company=speaker.company
+        photo=speaker.image_path
+        %}
         {% endfor %}
         {% for speaker in non_keynote_speakers %}
-            {%
-            include world/2024/speaker-card.html
-            first_name=speaker.first_name 
-            last_name=speaker.last_name
-            role=speaker.role
-            company=speaker.company
-            photo=speaker.image_path
-            %}
+        {%
+        include world/2024/speaker-card.html
+        first_name=speaker.first_name
+        last_name=speaker.last_name
+        role=speaker.role
+        company=speaker.company
+        photo=speaker.image_path
+        %}
         {% endfor %}
     </div>
 </section>
