--- a/_sass/world/2024/modules/_speakers.scss
+++ b/_sass/world/2024/modules/_speakers.scss
@@ -25,9 +25,10 @@
                 text-align: start;
             }
 
-            @media screen and (max-width: 650px) {
-                width: 80%;
-            }
+          
+            // ! @media screen and (max-width: 650px) {
+            // !     width: 80%;
+            // ! }
         }
 
         .buttonsContainer {
